nav and hero change

--- a/index.html
+++ b/index.html
@@ -6,233 +6,84 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Computer Accessories</title>
+    <!-- BS CS LINK -->
+     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+     <!-- BS JS LINK -->
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js
+      "></script>
+   
 </head>
 <body>
-    <header>
-        <h1 id="ecommerce">
-            <span id="computer">Computer</span><span id="accessories">Accessories</span>
-        </h1>
-        <nav>
-            <ul>
-                <li><a href="./index.html">Home</a></li>
-                <li><a href="./store.html">Store</a></li>
-                <li><a href="./login.html"><button>Login</button></a></li>
-                <li><a href="./sign up.html"><button>Sign Up</button></a></li>
+    <!-- nav start -->
+    <nav class="navbar navbar-expand-lg bg-transparent pt-3" >
+        <div class="container">
+          <a class="navbar-brand" href="#">
+            <h1 id="ecommerce">
+                <span id="computer">Computer</span><span id="accessories">Accessories</span>
+            </h1>
+          </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="./index.html">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./store.html">Store</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./login.html">Login</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./sign up.html">Sign Up</a>
+              </li>
             </ul>
-        </nav>
-    </header>
-    <section>
-        <div id="container">
-            <div class="card">
-                <img src="./card pic 1.avif" width="200px" height="160px" alt="">
-                <h1 class="itemname">
-                    24" Curved Monitor
-                </h1>
-                <h3>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, nam.
-                <h3>
-                    <h4>
-                        PKR.5999
-                    </h4>
-            </div>
-            <div class="card">
-                <img src="./card pic 2.jpg" width="260px" height="180px" alt="">
-                <h1 class="itemname">
-                     Gaming Monitor
-                </h1>
-                <h3>
-                   Lorem ipsum dolor, sit amet consectetur adipisicing elit. Soluta, laudantium.
-                <h3>
-                    <h4>
-                        PKR.160,000
-                    </h4>
-            </div>
-            <div class="card">
-                <img src="./card pic 3.webp" width="260px" height="180px" alt="">
-                <h1 class="itemname">
-                    HP PRO 202 Dual Core
-                </h1>
-                <h3>
-                   Lorem ipsum dolor, sit amet consectetur adipisicing elit. Soluta, laudantium.
-                <h3>
-                    <h4>
-                        PKR.2500
-                    </h4>
-            </div>
-            <div class="card">
-                <img src="./card pic 4.jpg" width="200px" height="180px" alt="">
-                <h1 class="itemname">
-                    Water Cooled Gaming PC
-                </h1>
-                <h3>
-                   Lorem ipsum dolor, sit amet consectetur adipisicing elit. Soluta, laudantium.
-                <h3>
-                    <h4>
-                        PKR.250,000
-                    </h4>
-            </div>
+          </div>
         </div>
-    </section>
-    <section>
-        <div id="container">
-            <div class="card">
-                <img src="./card pic 5.webp" width="260px" height="180px" alt="">
-                <h1 class="itemname">
-                    RGB Ligthining Speaker
-                </h1>
-                <h3>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero, porro.
-                <h3>
-                    <h4>
-                        PKR.1199
-                    </h4>
+      </nav>
+
+
+      <!-- hero -->
+       <div class="container hero">
+        <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active h-img h-img-1">
+                <!-- <img src="her-3.jpg" class="d-block w-100" alt="..."> -->
+              </div>
+              <div class="carousel-item h-img h-img-2">
+                <!-- <img src="hero-2.jpg" class="d-block w-100" alt="..."> -->
+              </div>
+              <div class="carousel-item h-img h-img-3">
+                <!-- <img src="hero-1.jpg" class="d-block w-100" alt="..."> -->
+              </div>
             </div>
-            <div class="card">
-                <img src="./card pic 6.jpg" width="200px" height="180px" alt="">
-                <h1 class="itemname">
-                     Bluetooth Headphone
-                </h1>
-                <h3>
-                   Lorem ipsum dolor, sit amet consectetur adipisicing elit. Soluta, laudantium.
-                <h3>
-                    <h4>
-                        PKR.999
-                    </h4>
-            </div>
-            <div class="card">
-                <img src="./card pic 7.jpg" width="260px" height="180px" alt="">
-                <h1 class="itemname">
-                    Gaming Mouse
-                </h1>
-                <h3>
-                   Lorem ipsum dolor, sit amet consectetur adipisicing elit. Soluta, laudantium.
-                <h3>
-                    <h4>
-                        PKR.1899
-                    </h4>
-            </div>
-            <div class="card">
-                <img src="./card pic 8.jpg" width="200px" height="180px" alt="">
-                <h1 class="itemname">
-                    Keyboard Cleaning Kit
-                </h1>
-                <h3>
-                   Lorem ipsum dolor, sit amet consectetur adipisicing elit. Soluta, laudantium.
-                <h3>
-                    <h4>
-                        PKR.499
-                    </h4>
-            </div>
-        </div>
-    </section>
-    <section>
-        <div id="container">
-            <div class="card">
-                <img src="./card pic 9.jpg" width="260px" height="180px" alt="">
-                <h1 class="itemname">
-                    Samsung Curved Monitor
-                </h1>
-                <h3>
-                    A 24-inch monitor can be a great companion to a laptop, offering a larger.
-                <h3>
-                    <h4>
-                        PKR.19999
-                    </h4>
-            </div>
-            <div class="card">
-                <img src="./card pic 10.jpg" width="260px" height="180px" alt="">
-                <h1 class="itemname">
-                     RGB Gaming Mouse
-                </h1>
-                <h3>
-                   Lorem ipsum dolor, sit amet consectetur adipisicing elit. Soluta, laudantium.
-                <h3>
-                    <h4>
-                        PKR.1500
-                    </h4>
-            </div>
-            <div class="card">
-                <img src="./card pic 11.webp" width="200px" height="180px" alt="">
-                <h1 class="itemname">
-                    Mini Computer Mouse
-                </h1>
-                <h3>
-                   Lorem ipsum dolor, sit amet consectetur adipisicing elit. Soluta, laudantium.
-                <h3>
-                    <h4>
-                        PKR.780
-                    </h4>
-            </div>
-            <div class="card">
-                <img src="./card pic 12.jpg" width="260px" height="180px" alt="">
-                <h1 class="itemname">
-                    Gaming Keyboard
-                </h1>
-                <h3>
-                   Lorem ipsum dolor, sit amet consectetur adipisicing elit. Soluta, laudantium.
-                <h3>
-                    <h4>
-                        PKR.2500
-                    </h4>
-            </div>
-        </div>
-    </section>
-    <section>
-        <div id="container">
-            <div class="card">
-                <img src="./card pic 13.jpeg" width="180px" height="180px" alt="">
-                <h1 class="itemname">
-                    Professional Gaming Headset
-                </h1>
-                <h3>
-                    A 24-inch monitor can be a great companion to a laptop, offering a larger.
-                <h3>
-                    <h4>
-                        PKR.3599
-                    </h4>
-            </div>
-            <div class="card">
-                <img src="./card pic 14.jpg" width="200px" height="180px" alt="">
-                <h1 class="itemname">
-                     Samsung USB
-                </h1>
-                <h3>
-                   Lorem ipsum dolor, sit amet consectetur adipisicing elit. Soluta, laudantium.
-                <h3>
-                    <h4>
-                        PKR.1600
-                    </h4>
-            </div>
-            <div class="card">
-                <img src="./card pic 15.jpg" width="260px" height="180px" alt="">
-                <h1 class="itemname">
-                    Gaming Speaker 
-                </h1>
-                <h3>
-                   Lorem ipsum dolor, sit amet consectetur adipisicing elit. Soluta, laudantium.
-                <h3>
-                    <h4>
-                        PKR.6500
-                    </h4>
-            </div>
-            <div class="card">
-                <img src="./card pic 16.jpg" width="260px" height="180px" alt="">
-                <h1 class="itemname">
-                    Razer Mouse Pad 
-                </h1>
-                <h3>
-                   Lorem ipsum dolor, sit amet consectetur adipisicing elit. Soluta, laudantium.
-                <h3>
-                    <h4>
-                        PKR.850
-                    </h4>
-            </div>
-        </div>
-    </section>
-    <footer>
-        <h1>
-            <span id="computer">Computer</span><span id="accessories">Accessories</span>
-        </h1>
-    </footer>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+       </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  
 </body>
 </html>
