added card data into json format

--- a/index.html
+++ b/index.html
@@ -70,6 +70,17 @@
           </div>
        </div>
 
+       <!-- second section -->
+
+       <section id="second">
+        <h2>
+          Products
+        </h2>
+        <div class="container products">
+          <div class="row row-one"></div>
+          <div class="row row-two"></div>
+        </div>
+       </section>
 
 
 
@@ -84,6 +95,41 @@
 
 
 
-  
+  <script src="main.js"></script>
 </body>
 </html>
+
+
+
+       <!-- <div class="row">
+            <div class="col col-lg-4 col-md-6">
+              <div class="card" style="width: 18rem;">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+              </div>
+            </div>
+            <div class="col col-lg-4 col-md-6">
+              <div class="card" style="width: 18rem;">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+              </div>
+            </div>
+            <div class="col col-lg-4 col-md-6">
+              <div class="card" style="width: 18rem;">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+              </div>
+            </div>
+          </div> -->
