--- a/index.html
+++ b/index.html
@@ -77,8 +77,17 @@
           Products
         </h2>
         <div class="container products">
-          <div class="row row-one"></div>
-          <div class="row row-two"></div>
+          <div class="row row-one mb-3"></div>
+          <div class="row row-two mb-3"></div>
+        </div>
+        <div>
+          <button id="viewmore">View More</button>
+        </div>
+        <div class="container">
+          <div class="row row-three mb-3"></div>
+        </div>
+        <div>
+          <button id="viewless">View Less</button>
         </div>
        </section>
 
