--- a/index.html
+++ b/index.html
@@ -78,13 +78,12 @@
         </h2>
         <div class="container products">
           <div class="row row-one mb-3"></div>
-          <div class="row row-two mb-3"></div>
         </div>
         <div>
           <button id="viewmore">View More</button>
         </div>
-        <div class="container">
-          <div class="row row-three mb-3"></div>
+        <div class="container products">
+          <div class="row row-two mb-3"></div>
         </div>
         <div>
           <button id="viewless">View Less</button>
