--- a/index.html
+++ b/index.html
@@ -74,23 +74,24 @@
 
        <section id="second">
         <h2>
-          Products
+           Computer Accessories
         </h2>
         <div class="container products">
           <div class="row row-one mb-3"></div>
         </div>
         <div>
-          <button id="viewmore">View More</button>
+          <button id="viewmore" class="view">View More</button>
         </div>
         <div class="container products">
           <div class="row row-two mb-3"></div>
         </div>
         <div>
-          <button id="viewless">View Less</button>
+          <button id="viewless" class="view">View Less</button>
         </div>
        </section>
 
 
+<section id="banner"></section>
 
 
 
