--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- nav start -->
     <nav class="navbar navbar-expand-lg bg-transparent pt-3" >
         <div class="container">
-          <a class="navbar-brand" href="#">
+          <a class="navbar-brand" href="index.html">
             <h1 id="ecommerce">
                 <span id="computer">Computer</span><span id="accessories">Accessories</span>
             </h1>
