--- a/login.html
+++ b/login.html
@@ -68,10 +68,9 @@
           <input type="text" id="form2Example2" placeholder="Enter Your Password" />
           <p id="passerror" class="error"></p>
         </div>
-
-        <a href="#">Reset Your Password</a>
         <p id="msg" class="error"></p>
         <button  type="button" id="login-btn">Login</button>
+        <p style="font-weight: bold; border-top: 1px solid black; padding-top: 1em;">Don't have an account? <a href="sign up.html">Create One</a></p>
       </form>
     </div>
   </div>
