--- a/sign up.html
+++ b/sign up.html
@@ -97,6 +97,7 @@
                 <button type="button" id="signup-btn">
                     Sign Up
                 </button>
+                <p style="font-weight: bold; border-top: 1px solid black; padding-top: 1em;">Already have an account? <a href="login.html">Login</a></p>
 
             </form>
         </div>
